--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Catch of the Day</title>
+    <title>Athena - Reading Life</title>
+
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0 user-scalable=0" />
+    <meta http-equiv="Content-Language" content="en">
+
+    <link rel="icon" type="image/png" href="favicon.png" />
+
   </head>
+
   <body>
-    <input type="checkbox" id="fold">
-    <label for="fold">Fold</label>
+    <input type="checkbox" id="start">
+    <label for="start">Start</label>
 
     <div id="main">
-      <!-- This is where our React app will go -->
     </div>
+
   </body>
+
 </html>
