Initial project setup

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <title>Athena - Reading Life</title>
+    <title>Artemis - Reading Life</title>
 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
