--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,8 @@
   </head>
 
   <body>
-    <input type="checkbox" id="start">
-    <label for="start">Start</label>
 
-    <div id="main">
-    </div>
+    <div id="main"></div>
 
   </body>
-
 </html>
